--- a/css/main.css
+++ b/css/main.css
@@ -120,6 +120,11 @@ time, mark, audio, video {
 
 .naslov-obavestenja img {
     cursor: pointer;
+    transition: 0.3s;
+}
+
+.activ-obavestenje {
+    transform: rotate(90deg);
 }
 
 .description-obavestenja {
@@ -292,6 +297,24 @@ time, mark, audio, video {
 .ocene img {
     width: 46px;
     height: 46px;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+.dodavanje-ocene {
+    display: none;
+    margin-right: 10px;
+}
+
+.dodavanje-ocene input {
+    width: 50px;
+}
+
+.dodavanje-ocene input[type="text"] {
+    padding-left: 5px;
+}
+
+.dodavanje-ocene input[type="button"] {
     cursor: pointer;
 }
 
