--- a/css/main.css
+++ b/css/main.css
@@ -73,6 +73,36 @@ time, mark, audio, video {
     color: gray;
 }
 
+.login-form #error {
+    text-align: center;
+    color: red;
+    font-size: 18px;
+    font-weight: 700;
+    background: white;
+    border-radius: 5px;
+    padding: 10px;
+    display: none;
+    max-width: 204px;
+}
+
+/* ucenici */
+
+.ucenici-section-1 {
+    padding: 70px 0;
+}
+
+.ucenici-section-1 h2 {
+    text-align: center;
+    font-size: 36px;
+    font-weight: 700;
+    margin-bottom: 50px;
+}
+
+.ucenik {
+    text-align: center;
+    font-size: 28px;
+}
+
 /* profesor */
 
 .header {
