--- a/css/main.css
+++ b/css/main.css
@@ -40,22 +40,24 @@ time, mark, audio, video {
     display: flex;
     flex-direction: column;
     border-radius: 20px;
-    background: gray;
+    background: brown;
     opacity: 0.9;
 }
 
 .login-form input {
     margin-bottom: 30px;
     opacity: 1;
-    background: gray;
+    background: brown;
     border: 0;
     padding: 5px;
     outline: none;
     color: greenyellow;
+    border-bottom: 2px solid yellow;
 }
 
-.login-form input {
-    border-bottom: 2px solid yellow;
+.login-form input::placeholder {
+    color: white;
+    letter-spacing: 2px;
 }
 
 .login-form input[type="submit"] {
@@ -66,11 +68,12 @@ time, mark, audio, video {
     font-weight: 700;
     text-transform: uppercase;
     margin-top: 20px;
+    letter-spacing: 2px;
 }
 
 .login-form input[type="submit"]:hover {
     background: greenyellow;
-    color: gray;
+    color: brown;
 }
 
 .login-form #error {
@@ -105,6 +108,11 @@ time, mark, audio, video {
 
 .ucenik + .ucenik {
     margin-top: 10px;
+}
+
+.pretraga {
+    justify-content: center;
+    margin-bottom: 50px;
 }
 
 /* profesor */
