--- a/css/main.css
+++ b/css/main.css
@@ -332,6 +332,16 @@ time, mark, audio, video {
     border: 1px solid gray;
     border-radius: 50%;
     margin-top: 5px;
+    position: relative;
+}
+
+.ocene span img {
+    position: absolute;
+    top: -10px;
+    right: -20px;
+    width: 20px;
+    height: 20px;
+    display: none;
 }
 
 .ocene span + span {
